--- a/solution-hw1/style.css
+++ b/solution-hw1/style.css
@@ -123,7 +123,7 @@ select {
     -moz-appearance: none;
 }
 
-select.bake {
+select {
 
     /* the arrow style was adopted from: https://codepen.io/vkjgr/pen/VYMeXp */
     
